Arguments, renamed "callback" to "sanitize", cleared section "values"

--- a/wm-settings.css
+++ b/wm-settings.css
@@ -1,4 +1,8 @@
-.wrap form h3 {
+form.wrap h3,
+form.wrap p.submit {
 	padding-top: 20px;
 	border-top: 1px solid #dfdfdf;
+}
+form.wrap p.submit {
+	text-align: right;
 }
