--- a/wm-settings.css
+++ b/wm-settings.css
@@ -3,3 +3,6 @@ form.wrap p.submit {
 	padding-top: 20px;
 	border-top: 1px solid #dfdfdf;
 }
+form.wrap td .settings-error p {
+	margin: 0.5em 0;
+}
