--- a/css/wm-settings.css
+++ b/css/wm-settings.css
@@ -1,10 +1,3 @@
-.notice.info {
-	border-color: #2ea2cc;
-}
-.notice.warning {
-	border-color: #ffba00;
-}
-
 .wm-settings-form h3,
 .wm-settings-form .submit {
 	padding-top: 20px;
@@ -62,7 +55,7 @@ tr.hide-label td {
 	padding-left: 0;
 }
 
-#wm_settings_reset {
+#WM_Settings_reset {
 	float: right;
 	color: #a00;
 	height: auto;
@@ -77,7 +70,7 @@ tr.hide-label td {
 	-webkit-box-shadow: none;
 	box-shadow: none;
 }
-#wm_settings_reset:hover {
+#WM_Settings_reset:hover {
 	color: #f00;
     text-decoration: none;
 }
@@ -94,7 +87,7 @@ tr.hide-label td {
 	    -moz-box-sizing: border-box;
 	    box-sizing: border-box;
 	}
-	#wm_settings_reset {
+	#WM_Settings_reset {
 		font-size: 14px;
 	    margin-top: 12px;
 	}
