Work in progress 2

--- a/css/wm-settings.css
+++ b/css/wm-settings.css
@@ -1,4 +1,4 @@
-.wm-settings-page h2.nav-tab-wrapper {
+/*.wm-settings-page h2.nav-tab-wrapper {
 	display: none;
 }
 .wm-settings-page .nav-tab {
@@ -51,4 +51,4 @@
 	.wm-settings-page .button.wm-settings-reset {
 		font-size: 14px;
 	}
-}*/
+}*/*/
